--- a/thesis/latex/reference/reference_code.tex
+++ b/thesis/latex/reference/reference_code.tex
@@ -95,4 +95,73 @@ Mauris laoreet maximus aliquet. Mauris at gravida elit. Ut nec lobortis
 elit. Sed lacinia nisi in ex sollicitudin, ac consequat lacus imperdiet.
 Etiam et velit eu lacus maximus faucibus. Vestibulum ante ipsum primis
 in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vulputate
-tellus ullamcorper odio sodales, non scelerisque neque eleifend. 
+tellus ullamcorper odio sodales, non scelerisque neque eleifend.
+
+
+
+\chapter{Toisen luvun otsikko} \label{Toinen luku}
+
+Tässä luvussa tarkastellaan kahden kuvan upottamista samaan kelluvaan
+kuvaympäristöön (Kuva \ref{fig:Optimointia-kahdella-eri}).
+
+\begin{figure}[tbh]
+\subfloat[Käynnistysajan optimointi Nailgunilla.]{\begin{centering}
+\includegraphics[width=0.45\textwidth]{kuvat/nailgun.pdf}
+\par\end{centering}
+}\subfloat[Koon optimointi Proguardilla.]{\begin{centering}
+\includegraphics[width=0.45\textwidth]{kuvat/proguard.pdf}
+\par\end{centering}
+}\caption{Optimointia kahdella eri tavalla.\label{fig:Optimointia-kahdella-eri}}
+
+\end{figure}
+
+
+
+\appchapter{Liitedokumentti}
+
+Liitteen ohjelmakoodi \ref{alg:Tyyppiluokka-Monad} kuvaa matemaattisen
+monadirakenteen pohjalta rakentuvan Haskellin tyyppiluokan. Tyyppiluokan
+voi nähdä eräänlaisena abstraktina ohjelmointirajapintana (API\nomenclature[API]{API}{Application Programming Interface}),
+joka muodostaa ohjelmoijalle abstraktin ohjelmointikielen käyttöliittymän
+(UI\nomenclature[UI]{UI}{User Interface}).
+
+\begin{algorithm}[tbh]
+\begin{minted}{haskell}
+class Monad m where
+    ( >>= )         :: m a -> (a -> m b) -> m b
+    return          :: a                 -> m a
+
+    fail            :: String            -> m a
+    (>>)            :: m a -> m b        -> m b
+    m >> k          =  m >>= \_ -> k       -- default
+
+instance Monad IO where  ...               -- omitted
+\end{minted}
+
+\caption{Tyyppiluokka 'Monad'.\label{alg:Tyyppiluokka-Monad}}
+\end{algorithm}
+
+\newpage{}
+
+Ensimmäisen liitteen toinen sivu. Ohjelmalistaus \ref{alg:Monadin-kayttoa}
+demonstroi vielä monadin käyttöä.
+
+\begin{algorithm}[tbh]
+\begin{minted}{haskell}
+main =
+return "Your name:" >>=
+putStr >>=
+\_ -> getLine >>=
+\n -> putStrLn ("Hey " ++ n)
+\end{minted}
+
+\caption{Monadin käyttöä.\label{alg:Monadin-kayttoa}}
+\end{algorithm}
+
+
+\appchapter{Liitedokumentti 2}
+
+Tässä esimerkki\pagebreak{}
+
+toisesta kaksisivuisesta liitteestä.
+\end{document}
