--- a/thesis/latex/thesis.tex
+++ b/thesis/latex/thesis.tex
@@ -4,7 +4,7 @@
 % Technical usage guide: https://tech.utugit.fi/soft/thesis/doc/doc/overview/
 % 
 
-\documentclass[language=finnish,version=final,mainfont=none,sharelatex=false]{utuftthesis}
+\documentclass[language=english,version=final,mainfont=none,sharelatex=false]{utuftthesis}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
 \usepackage{float}
@@ -25,13 +25,13 @@
 
 \begin{document}
 
-\pubyear{2019}
-\pubmonth{6}
+\pubyear{2025}
+\pubmonth{1}
 \publab{Labran nimi}
 \publaben{Laboratory Name}
-\pubtype{tkk}
-\title{Name of Thesis}
-\author{My Name}
+\pubtype{gradu}
+\title{MscThesis}
+\author{Botond Ortutay}
 
 \maketitle
 \input{abstract.tex}
@@ -43,7 +43,7 @@
 \listoffigures
 
 % if you want a list of tables
-\listoftables
+%\listoftables
 
 % if you want a list of acronyms
 \listofacronyms
@@ -63,7 +63,14 @@ underscores \_ in file names (may break hyperref).
 Good luck!
 \end{comment}
 
-\input{johdanto.tex}\input{toinenluku.tex}
+\input{intro.tex}
+\input{bg.tex}
+\input{literature-review.tex}
+\input{arch-description.tex}
+\input{implementation.tex}
+\input{usability.tex}
+\input{feasibility.tex}
+\input{conclusion.tex}
 
 %\input{file_name_of_chapter_x}
 %\input{file_name_of_chapter_y}
@@ -79,51 +86,4 @@ page counting to work!
 \end{comment}
 
 
-\appchapter{Liitedokumentti}
-
-Liitteen ohjelmakoodi \ref{alg:Tyyppiluokka-Monad} kuvaa matemaattisen
-monadirakenteen pohjalta rakentuvan Haskellin tyyppiluokan. Tyyppiluokan
-voi nähdä eräänlaisena abstraktina ohjelmointirajapintana (API\nomenclature[API]{API}{Application Programming Interface}),
-joka muodostaa ohjelmoijalle abstraktin ohjelmointikielen käyttöliittymän
-(UI\nomenclature[UI]{UI}{User Interface}).
-
-\begin{algorithm}[tbh]
-\begin{minted}{haskell}
-class Monad m where
-    ( >>= )         :: m a -> (a -> m b) -> m b
-    return          :: a                 -> m a
-
-    fail            :: String            -> m a
-    (>>)            :: m a -> m b        -> m b
-    m >> k          =  m >>= \_ -> k       -- default
-
-instance Monad IO where  ...               -- omitted
-\end{minted}
-
-\caption{Tyyppiluokka 'Monad'.\label{alg:Tyyppiluokka-Monad}}
-\end{algorithm}
-
-\newpage{}
-
-Ensimmäisen liitteen toinen sivu. Ohjelmalistaus \ref{alg:Monadin-kayttoa}
-demonstroi vielä monadin käyttöä.
-
-\begin{algorithm}[tbh]
-\begin{minted}{haskell}
-main =
-return "Your name:" >>=
-putStr >>=
-\_ -> getLine >>=
-\n -> putStrLn ("Hey " ++ n)
-\end{minted}
-
-\caption{Monadin käyttöä.\label{alg:Monadin-kayttoa}}
-\end{algorithm}
-
-
-\appchapter{Liitedokumentti 2}
-
-Tässä esimerkki\pagebreak{}
-
-toisesta kaksisivuisesta liitteestä.
 \end{document}
