Written intro beginning, rethought rqs, no datastructure changes needed. Closes #7 #17 #18

--- a/thesis/latex/intro.tex
+++ b/thesis/latex/intro.tex
@@ -1,9 +1,14 @@
 \chapter{Introduction} \label{intro}
 
 \section{The goals of this thesis} \label{goals}
+This thesis aims to design and implement a system that integrates a backend powered computer vision with an Augmented Reality (AR) interface. The concept involves a device capturing an image feed through its camera, which is then transmitted to a processing unit. Here, computer vision algorithms analyze the data to extract meaningful information, which is subsequently sent to the  AR interface to give feedback to user. In this thesis, I document the journey of developing this system and assess its performance.
 
 \section{Research Questions} \label{rq}
+The thesis aims to answer the following Research Questions:
+\begin{description}
+	\item[RQ1:] \label{rq1} What are the technological challenges in combining advanced computer vision algorithms with an AR user interface?
+	\item[RQ2:] \label{rq2} Can a system with a backend computer vision system and an AR user interface be used in a cooking environment?
+	\item[RQ3:] \label{rq3a} Can such a system provide satisfactory user experience?
+\end{description}
 
 \section{Methodology Overview} \label{meth}
-
-
