Work for Feb 27 meeting. Closes #8. Closes #6

--- a/thesis/latex/bg.tex
+++ b/thesis/latex/bg.tex
@@ -1,2 +1,31 @@
 \chapter{Background    (IF NOT COVERED BY 1.1)} \label{bg}
+\textbf{Notes:}\\ 
+\begin{itemize}
+	\item This may be in 1.1 or as a separate chapter (2)
 
+	\item Right now it is written as a separate chapter, decide precise 
+	datastructure later.
+
+	\item The purpose of the background is to justify the research 
+	questions!
+	\begin{itemize}
+		\item Phases described in \#8 :
+		\begin{itemize}
+			\item RQ1 answered by phases 1 \& 2 (chapters 3,4,5)
+			\item RQ2 has to be considered in phase 2 (chapters 4 
+			\& 5) but is only fully answered in phase 3 (chapters 6 
+			\& 7) 
+			\item RQ3 is answered by phase 3 (chapters 6 \& 7)
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
+
+\textbf{Tasks:}\\
+\begin{itemize}
+	\item Create a more in depth ``skeleton'' of the bg chapter
+
+	\item identify, look at, take notes \& read through sources you need 
+	for this chapter
+
+	\item Write the chapter
+\end{itemize} 
