--- a/thesis/latex/intro.tex
+++ b/thesis/latex/intro.tex
@@ -1,14 +1,46 @@
 \chapter{Introduction} \label{intro}
 
 \section{The goals of this thesis} \label{goals}
-This thesis aims to design and implement a system that integrates a backend powered computer vision with an Augmented Reality (AR) interface. The concept involves a device capturing an image feed through its camera, which is then transmitted to a processing unit. Here, computer vision algorithms analyze the data to extract meaningful information, which is subsequently sent to the  AR interface to give feedback to user. In this thesis, I document the journey of developing this system and assess its performance.
+This thesis aims to design and implement a system that integrates a backend 
+powered computer vision with an Augmented Reality (AR) interface. The concept 
+involves a device capturing an image feed through its camera, which is then 
+transmitted to a processing unit. Here, computer vision algorithms analyze 
+the data to extract meaningful information, which is subsequently sent to the 
+AR interface to give feedback to user. In this thesis, I document the journey 
+of developing this system and assess its performance.
 
 \section{Research Questions} \label{rq}
 The thesis aims to answer the following Research Questions:
 \begin{description}
-	\item[RQ1:] \label{rq1} What are the technological challenges in combining advanced computer vision algorithms with an AR user interface?
-	\item[RQ2:] \label{rq2} Can a system with a backend computer vision system and an AR user interface be used in a cooking environment?
-	\item[RQ3:] \label{rq3a} Can such a system provide satisfactory user experience?
+	\item[RQ1:] \label{rq1} What are the technological challenges in 
+	combining advanced computer vision algorithms with an AR user interface?
+
+	\item[RQ2:] \label{rq2} Can a system with a backend computer vision 
+	system and an AR user interface be used in a cooking environment?
+
+	\item[RQ3:] \label{rq3} Can such a system provide satisfactory user 
+	experience?
 \end{description}
 
 \section{Methodology Overview} \label{meth}
+The work covered in this thesis mostly consist of the following three phases: 
+firstly I conduct a literature review in chapter \ref{Literature review}. The 
+purpose of this is to learn about the technologies involved in this project, 
+to find out what perceived challenges were found by other people working with 
+these technologies and to search for projects similar to ours, conducted by the 
+scientific community. Starting with a literature review should also provide a 
+firm scientific basis to the later phases. \par
+	The second phase of the work concerns architecture design and prototype 
+development. All relevant technological challenges found during the literature 
+review are collected to chapter \ref{challenges} for further analysis. Based 
+on all these findings we then propose an architecture for a prototype in 
+chapter \ref{arch}. The prototype is then implemented and the whole 
+development process, the technologies used, as well as anything notable that 
+happens during development is described in chapter \ref{implementation}. \par
+	The third phase of the work is an empirical usability study conducted 
+on the developed prototype. Here the finished prototype is given out to test 
+subjects to measure how well the system performs. Usability is measured both 
+through asking the opinions of the test subjects through a questionnaire and 
+through measurements made by the prototype software. All the collected data and 
+the questionnaire used can be found in the attachments. This phase of work is 
+more thoroughly described in the chapters \ref{usability} and \ref{feasibility}.
