Progress save for Mar 13 g session, very first structure for literature review, very first written version of literature review

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -1,17 +1,27 @@
-@article{crawley2007write,
-  title={How to Write a Research Proposal and Succeed},
-  author={Crawley, Gerard M and O'Sullivan, Eoin},
-  year={2007},
-  publisher={World Scientific}
+@article{pylvanainen,
+	title={Supporting Microscopy Learning with Ocul-AR, a Virtual and Augmented Reality-Powered Mobile Application},
+	author={Joanna Pylvänäinen and Junel Solis and Diana Toivola and Pasi Kankaanpää},
+	year={2023},
+	month={may},
+	volume={3393},
+	pages={28-37},
+	journal={CEUR Workshop Proceedings},
+	issn={1613-0073},
+	publisher={CEUR Workshop Proceedings},
+	note={Technology-Enhanced Learning in Laboratories workshop (TELL) ; Conference date: 27-04-2023}
 }
 
-@article{puasuareanu2009survey,
-  title={A survey of new trends in symbolic execution for software testing and analysis},
-  author={P{\u{a}}s{\u{a}}reanu, Corina S and Visser, Willem},
-  journal={International journal on software tools for technology transfer},
-  volume={11},
-  number={4},
-  pages={339--353},
-  year={2009},
-  publisher={Springer}
+@Article{estrada,
+	author={Estrada, John and Paheding, Sidike and Yang, Xiaoli and Niyaz, Quamar},
+	title={Deep-Learning-Incorporated Augmented Reality Application for Engineering Lab Training},
+	journal={Applied Sciences},
+	volume={12},
+	year={2022},
+	number={10},
+	url={https://www.mdpi.com/2076-3417/12/10/5159},
+	issn={2076-3417},
+	doi={10.3390/app12105159}
 }
+
+
+
