(Minaee, Liang & Yan, 2022) III. A read, (Van Gestel et al, 2024) started writing literature review section

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -23,5 +23,18 @@
 	doi={10.3390/app12105159}
 }
 
-
+@Article{VanGestel2024,
+	author={Van Gestel, Frederick and Van Aerschot, Fiene and Frantz, Taylor and Verhellen, Anouk and Barb, Kurt and Jansen, Bart and Vandemeulebroucke, Jef and Duerinck, Johnny and Scheerlinck, Thierry},
+	title={Augmented reality guidance improves accuracy of orthopedic drilling procedures},
+	journal={Scientific Reports},
+	year={2024},
+	month={Oct},
+	day={25},
+	volume={14},
+	number={1},
+	pages={25269},
+	issn={2045-2322},
+	doi={10.1038/s41598-024-76132-3},
+	url={https://www.nature.com/articles/s41598-024-76132-3#citeas}
+}
 
