(Van Gestel et al, 2024) literature review session finished

--- a/thesis/latex/literature-review.tex
+++ b/thesis/latex/literature-review.tex
@@ -114,4 +114,15 @@ proprioception-guided surgery and surgery using the new
 AR-tool.\cite{VanGestel2024} The mock surgeries were quite simple: the wooden 
 bone-models had defined entry and exit points between which the surgeons had 
 to drill, with parts of the models being covered by a cloth to better 
-simulate real conditions.\cite{VanGestel2024}
+simulate real conditions.\cite{VanGestel2024} The success of mock surgeries 
+was examined by measuring the distances and angles between the desired exit 
+point and the actual exit points drilled by the surgeons.\cite{VanGestel2024} 
+They also performed statistical analysis on the drilling session results, 
+considering the angle between the actual and planned exit points a variable 
+dependent on the experience level of the surgeon, the guidance technique used 
+and the desired drilling direction.\cite{VanGestel2024} They found that the 
+AR guidance tool they developed improved the surgeons' output regardless of 
+experience level.\cite{VanGestel2024} The AR tool was an especially useful 
+tool when performing oblique, complex and angled drilling paths. With these 
+drilling paths the difference between AR-guidance and traditional guidance was 
+even more pronounced.\cite{VanGestel2024}
