(Reyes et al, 2016) literature review session finished

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -38,3 +38,16 @@
 	url={https://www.nature.com/articles/s41598-024-76132-3#citeas}
 }
 
+@article{reyesEtAl2016,
+	author = {Monroy Reyes, Alejandro and Vergara Villegas, Osslan Osiris and Miranda Bojórquez, Erasmo and Cruz Sánchez, Vianey Guadalupe and Nandayapa, Manuel},
+	title = {A mobile augmented reality system to support machinery operations in scholar environments},
+	journal = {Computer Applications in Engineering Education},
+	volume = {24},
+	number = {6},
+	pages = {967-981},
+	keywords = {mobile augmented reality, manufacturing environments, machinery operation, technology acceptance, lathe and milling},
+	doi = {https://doi.org/10.1002/cae.21772},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cae.21772},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/cae.21772},
+	year = {2016}
+}
