--- a/thesis/latex/literature-review.tex
+++ b/thesis/latex/literature-review.tex
@@ -125,4 +125,76 @@ AR guidance tool they developed improved the surgeons' output regardless of
 experience level.\cite{VanGestel2024} The AR tool was an especially useful 
 tool when performing oblique, complex and angled drilling paths. With these 
 drilling paths the difference between AR-guidance and traditional guidance was 
-even more pronounced.\cite{VanGestel2024}
+even more pronounced.\cite{VanGestel2024}\par
+	Another prototype was developed by \textcite{reyesEtAl2016}. Their aim 
+was to develop an AR system to aid novice users in using milling and lathe 
+machines in a school manufacturing laboratory, and use this as a basis to 
+measure the acceptance rate and performance of such a system in the field of 
+education.\cite{reyesEtAl2016} Since they designed a tool to aid with the 
+physical operation of industrial machinery, it was important to them that their 
+tool was hands-free as the users would need to operate the industrial 
+machinery simultaneously.\cite{reyesEtAl2016}\par
+	\textcite{reyesEtAl2016} emphasized that their system was a Mobile 
+Augmented Reality (MAR) system, so essentially it was technically an 
+application built for the Android Operating System. Contentwise their 
+application included tutorials for a milling and a lathe machine which would 
+guide the users in tool setup, working material setup, machinery setup and 
+starting the machines in question.\cite{reyesEtAl2016} The AR-elements in this 
+app included 3D-models of the machines themselves as well as additional 
+tools, such as spanners and Allen wrenches, as well as text instructions with 
+descriptions on how to perform the basic tasks, labels for helping the user 
+in locating machinery components and tools, 3D arrows to indicate flow 
+direction, and real time videos of task explanations performed by 
+experts.\cite{reyesEtAl2016}\par
+	Since the two-hand requirement made it undesirable to run the 
+application on a smartphone, two AR-devices were chosen to run the 
+application in the experimental phase. Firstly ORA-1 AR glasses, which are 
+optical see-through glasses where the real world is observed through 
+transparent mirrors placed in front of the eyes of the user, and the VR-PRO 
+AR HMD, which is just a HMD with video see-through.\cite{reyesEtAl2016} Their 
+AR solution was simply Marker-based MAR with two kinds of markers: Frame 
+markers (FM), which are traditional AR-markers, so frame patterns with encoded 
+data in the frame, and Item Targets (IT) which are real world objects that 
+the system tries to match to a 2D image using traditional CV-algorithms such 
+as edge detection and corner detection.\cite{reyesEtAl2016} The purpose of the 
+markers in this system is to help the system detect the machinery, and 
+provide the system with placement information for the augmentations and 
+explanation videos.\cite{reyesEtAl2016}\par
+	\textcite{reyesEtAl2016} describe the flow of the application as 
+follows: first the user needs to start the system by scanning the main menu 
+marker. Then they will enter the main menu. From here the user can either 
+start the application or get system help information. The system help 
+information gives the users info on how to use the app. Once the application 
+is started, the user can scan the device markers, which then lets the user 
+scan the individual lesson markers and multimedia markers for that device. 
+This lets the user access the interactive tutorials and educational videos 
+which actually help him/her to learn the operation of that 
+machine.\cite{reyesEtAl2016}\par
+	This application was then tested by 16 students and teachers in the 
+university manufacturing laboratory for an experiment.\cite{reyesEtAl2016} In 
+the experiment the subjects were first given a general introduction to AR, 
+after which they were introduced to the AR-system developed for this study. 
+Then they were asked to complete the lessons included in the AR-systems on 
+one of the two hardware options that was available. Finally the participants 
+were asked to complete a survey to gather results.\cite{reyesEtAl2016} The 
+survey was a 10-question survey with a Likert-scale scoring-system. The first 
+five questions related to acceptance metrics (satisfaction, precision, 
+understandability, explanativeness, attractiveness). The next three questions 
+related to performance metrics (interface, speed, marker system). This was 
+followed by a generic "Have you used mobile AR systems before?"-type of 
+question. The last question was an oper answer field where they asked for 
+feedback and comments.\cite{reyesEtAl2016}\par
+	For each question they calculated a score by doing a Likert-scale to 
+point conversion where "very bad" became 1, "regular" became 3, and "very 
+good" became 5, and then calculating the average from all the answers. The 
+scores for the different metrics were: satisfaction: 4; precision: 4; 
+understandability: 4,5; explanativeness: 4; attractiveness: 4,5; interface: 
+3,5; speed: 4 and marker system: 4,5. Out of these interface was the weakest 
+element, with only 50\% of the respondents rating it as good or very 
+good.\cite{reyesEtAl2016} According to the feedback from the open answer 
+field the teachers and the lab staff participating in this study were 
+interested in using the AR-system developed for this experiment as an 
+educational tool later. The students also saw it as an appealing way to learn 
+machine operation basics.\cite{reyesEtAl2016} With this it is pretty clear to 
+say that the system developed for this project has potential to be a 
+real-life teaching-learning tool.
