(Lin & Lee, 2020) literature review session finished

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -39,15 +39,28 @@
 }
 
 @article{reyesEtAl2016,
-	author = {Monroy Reyes, Alejandro and Vergara Villegas, Osslan Osiris and Miranda Bojórquez, Erasmo and Cruz Sánchez, Vianey Guadalupe and Nandayapa, Manuel},
-	title = {A mobile augmented reality system to support machinery operations in scholar environments},
-	journal = {Computer Applications in Engineering Education},
-	volume = {24},
-	number = {6},
-	pages = {967-981},
-	keywords = {mobile augmented reality, manufacturing environments, machinery operation, technology acceptance, lathe and milling},
-	doi = {https://doi.org/10.1002/cae.21772},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cae.21772},
-	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/cae.21772},
-	year = {2016}
+	author={Monroy Reyes, Alejandro and Vergara Villegas, Osslan Osiris and Miranda Bojórquez, Erasmo and Cruz Sánchez, Vianey Guadalupe and Nandayapa, Manuel},
+	title={A mobile augmented reality system to support machinery operations in scholar environments},
+	journal={Computer Applications in Engineering Education},
+	volume={24},
+	number={6},
+	pages={967-981},
+	keywords={mobile augmented reality, manufacturing environments, machinery operation, technology acceptance, lathe and milling},
+	doi={https://doi.org/10.1002/cae.21772},
+	url={https://onlinelibrary.wiley.com/doi/abs/10.1002/cae.21772},
+	eprint={https://onlinelibrary.wiley.com/doi/pdf/10.1002/cae.21772},
+	year={2016}
 }
+
+@InProceedings{LinAndLee2020,
+	author={Lin, Yu-Ting and Lee, I-Jui},
+	editor={Chen, Jessie Y. C. and Fragomeni, Gino},
+	title={Development of an Augmented Reality System Achieving in CNC Machine Operation Simulations in Furniture Trial Teaching Course},
+	booktitle={Virtual, Augmented and Mixed Reality. Industrial and Everyday Life Applications},
+	year={2020},
+	publisher={Springer International Publishing},
+	address={Cham},
+	pages={121-135},
+	isbn={978-3-030-49698-2}
+}
+
