--- a/thesis/latex/literature-review.tex
+++ b/thesis/latex/literature-review.tex
@@ -197,4 +197,63 @@ interested in using the AR-system developed for this experiment as an
 educational tool later. The students also saw it as an appealing way to learn 
 machine operation basics.\cite{reyesEtAl2016} With this it is pretty clear to 
 say that the system developed for this project has potential to be a 
-real-life teaching-learning tool.
+real-life teaching-learning tool.\par
+	A somewhat similar tool was also developed by 
+\textcite{LinAndLee2020}. With it they aim to use AR-simulation as a 
+practical aid to deepen students' understanding of CNC machine operation. 
+This should help the students to learn operate CNC machines independently 
+while also helping to solve resource limitation problems in education. 
+Oftentimes workshops in vocational education only have a limited number of 
+CNC machines when compared to the demand, as well as insufficient space for 
+operation. On top of there are also a limited amount of processing materials 
+and the wearing of the machines themselves during operation is also a real 
+issue.\cite{LinAndLee2020} All these problems lead to an outcome where 
+students don't get enough practice on CNC machining.\cite{LinAndLee2020}\par
+	There are also issues with traditional education methods that make 
+learning proper CNC machine operations difficult. For example it is hard for 
+students to understand, how the physical size and movement capabilities of 
+CNC machines relate to the workpiece models they create using modeling 
+software.\cite{LinAndLee2020} Different three dimensional and complicated 
+manufacturing processes and methods, such as turning over processing and mold 
+hole processing among others, are extremely difficult to properly showcase 
+without using three dimensional visualization.\cite{LinAndLee2020} 
+Furthermore it is difficult for students to understand how the instructions 
+sent to the CNC machine actually affect the workpiece itself during 
+manufacturing.\cite{LinAndLee2020}\par
+	To solve these problems \textcite{LinAndLee2020} proposed using AR to 
+simulate CNC machine operation and the machining process.\cite{LinAndLee2020} 
+They built an AR application where the built-in virtual imaging technology 
+can superimpose virtual 3D machining workpieces on the physical CNC machine 
+using mobile hardware, such as tablets, as displays.\cite{LinAndLee2020} 
+While \textcite{LinAndLee2020} do not discuss the workings or contents of 
+their application in-depth, they still disclose that they used AR-markers 
+corresponding to different operation processes. They placed these markers on 
+the CNC machine itself so that their system could be used in the real 
+manufacturing workshop setting.\cite{LinAndLee2020} \textcite{LinAndLee2020} 
+also disclose that their application includes pre-made animations for 
+different manufacturing processes supported by the CNC machine.\par
+	\textcite{LinAndLee2020} used their application to conduct a ten 
+participant study consisting of tool-aided CNC machine operation, followed by 
+filling out System Usability Scale-type questionnaire (SUS). The participants 
+had prior CNC machine experience, but were still novice level 
+students.\cite{LinAndLee2020} These students used the app to simulate 
+operating a CNC machine to manufacture an example furniture piece. The SUS 
+consisted of 20 questions in total each scored 1-7, where 1 is high 
+difficulty and 7 is low difficulty. The questions were of five different 
+evaluation dimensions: “Understanding of Machining Procedures”, “Time of 
+Operation”, “Accuracy of Operation”, “Sequence and Information of the CNC 
+Operation Steps” and “Understanding of the Interface Knowledge of the CNC 
+Cutting Machine Center”.\cite{LinAndLee2020} Each of these categories acquired 
+a score of 4,86; 4,8; 5,52; 4,98 and 5,6 respectively.\cite{LinAndLee2020}\par
+	The results of the experiment showed that the AR system helped the 
+students to understand the relationship between the workpieces and the CNC 
+machining methods.\cite{LinAndLee2020} \textcite{LinAndLee2020} also listed 
+the following advantages they found in using AR-based system for learning CNC 
+machine operations:
+\begin{enumerate}
+	\item Students understood and were able to complete necessary steps of using CNC machine for making furniture.
+	\item Students understood the relationship between the virtual representations of processing objects and the real-world procedure.
+	\item The system reduced the work needed to be done by the teachers in teaching operating the CNC machine to students.
+	\item Students were able to practice CNC machine operation more as they weren't limited by machine availability anymore. This also decreased material waste and safety risks.
+	\item Students were able to preview the interaction between models done by them and the cutting path of the CNC machine.
+\end{enumerate}
