Changed Literature review section order

--- a/thesis/latex/literature-review.tex
+++ b/thesis/latex/literature-review.tex
@@ -1,10 +1,11 @@
 \chapter{Literature review} \label{Literature review}
 
-\section{Client-Server Architectures    \}    \}} \label{csa}
+\section{Augmented Reality (AR)} \label{ar}
 
-\section{Computer Vision (CV)           \}    \}    (COMBINE IF NEEDED)} \label{cv}
+\section{Computer Vision (CV)} \label{cv}
 
-\section{Augmented Reality (AR)               \}} \label{ar}
+\section{(Client-Server Architectures)} \label{csa}
+
 
 \section{Prototypes Similar to Ours} \label{protos}
 Before designing and describing our own software architecture it is 
