Structural changes for Máj 9 meeting. Closes #25

--- a/thesis/latex/arch-description.tex
+++ b/thesis/latex/arch-description.tex
@@ -1,5 +1,18 @@
 \chapter{Architecture Description} \label{Arch description}
 
+Justification for RQ2 should be included in this chapter \\
+RQ2: can such a system be used in cooking?
+\begin{itemize}
+	\item{Goal: build a demo system thet uses CV with AR}
+	\begin{itemize}
+		\item{Why cooking?}
+		\begin{itemize}
+			\item{AR could make the task easier}
+			\item{CV: lots of things to track (ingredients, pots, knives etc)}
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
+
 \section{Perceived Challenges} \label{challenges}
 
 \begin{itemize}
