--- a/thesis/latex/bg.tex
+++ b/thesis/latex/bg.tex
@@ -1,31 +1,21 @@
-\chapter{Background    (IF NOT COVERED BY 1.1)} \label{bg}
-\textbf{Notes:}\\ 
+\chapter{Background} \label{bg}
+
+\section{Justification for RQ1 (come up with a better title later)} \label{rq1-justified}
+
+RQ1: technological challenges in combining CV \& AR
 \begin{itemize}
-	\item This may be in 1.1 or as a separate chapter (2)
-
-	\item Right now it is written as a separate chapter, decide precise 
-	datastructure later.
-
-	\item The purpose of the background is to justify the research 
-	questions!
+	\item{Introduce CV & AR}
+	\item{Why do we want to combine these techs?}
 	\begin{itemize}
-		\item Phases described in \#8 :
+		\item{Traditional AR tracking: built to detect specific things in environment}
+		\item{CV: larger computer model used for image analysis could theoretically be used to perform this task}
 		\begin{itemize}
-			\item RQ1 answered by phases 1 \& 2 (chapters 3,4,5)
-			\item RQ2 has to be considered in phase 2 (chapters 4 
-			\& 5) but is only fully answered in phase 3 (chapters 6 
-			\& 7) 
-			\item RQ3 is answered by phase 3 (chapters 6 \& 7)
+			\item{Solves some problems but creates others}
+			\begin{itemize}
+				\item{This is what we aim to map out}
+			\end{itemize}
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
 
-\textbf{Tasks:}\\
-\begin{itemize}
-	\item Create a more in depth ``skeleton'' of the bg chapter
-
-	\item identify, look at, take notes \& read through sources you need 
-	for this chapter
-
-	\item Write the chapter
-\end{itemize} 
+\section{AR in a nutshell (come up with a better title later)} \label{ar}
