--- a/thesis/latex/usability.tex
+++ b/thesis/latex/usability.tex
@@ -1,1 +1,16 @@
 \chapter{(USABILITY)} \label{usability}
+
+Justification for RQ3 here \\
+RQ3: user experience
+\begin{itemize}
+	\item{Why measure user experience?}
+	\begin{itemize}
+		\item{We want to demo the usefulness of these two techs working together}
+		\begin{itemize}
+			\item{An app can only be useful if it's used}
+			\begin{itemize}
+				\item{An app will only ever be used if it has good UX}
+			\end{itemize}
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
