--- a/thesis/latex/literature-review.tex
+++ b/thesis/latex/literature-review.tex
@@ -1,10 +1,7 @@
 \chapter{Literature review} \label{Literature review}
 
-\section{Augmented Reality (AR)} \label{ar}
-
 \section{Computer Vision (CV)} \label{cv}
-
-\section{(Client-Server Architectures)} \label{csa}
+% This should include the Client-Server Architecture stuff
 
 
 \section{Prototypes Similar to Ours} \label{protos}
